<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="388dp"
        android:layout_height="362dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="174dp"
        android:background="@drawable/board"
        app:columnCount="3"
        app:rowCount="3">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/todo1"
            android:onClick="DropIn"
            android:tag="0"
            app:layout_column="0"
            app:layout_row="0"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo2"
            android:onClick="DropIn"
            android:tag="1"
            app:layout_column="1"
            app:layout_row="0"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo3"
            android:onClick="DropIn"
            android:tag="2"
            app:layout_column="2"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo4"
            android:onClick="DropIn"
            android:tag="3"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo5"
            android:onClick="DropIn"
            android:tag="4"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo6"
            android:onClick="DropIn"
            android:tag="5"
            app:layout_column="2"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo7"
            android:onClick="DropIn"
            android:tag="6"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo8"
            android:onClick="DropIn"
            android:tag="7"
            app:layout_column="1"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo9"
            android:onClick="DropIn"
            android:tag="8"
            app:layout_column="2"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:id="@+id/playAgainLayout"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="254dp"
        android:background="#FFEB3B"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="invisible">

        <EditText
            android:id="@+id/winnerMessage"
            android:layout_width="158dp"
            android:layout_height="59dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/winner1"
            tools:ignore="LabelFor,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="128dp"
            android:layout_height="61dp"
            android:onClick="playAgain"
            android:text="@string/play_again"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

</RelativeLayout>